--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "raw-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -56,11 +56,14 @@
     "ag-grid-react": "^21.0.1",
     "bootstrap": "^4.3.1",
     "faker": "^4.1.0",
+    "firebase": "^8.8.1",
     "font-awesome": "^4.7.0",
+    "history": "^4.10.1",
     "holderjs": "^2.9.6",
     "isomorphic-fetch": "^3.0.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.11",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
@@ -80,6 +83,7 @@
     "react-dropzone": "^10.1.5",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^7.12.2",
     "react-hot-loader": "^4.11.0",
     "react-image-crop": "^8.0.2",
     "react-intl-tel-input": "^8.0.5",
@@ -89,7 +93,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-text-mask": "^5.4.3",
-    "react-toastify": "^5.2.1",
+    "react-toastify": "^5.5.0",
     "react-toggle": "^4.0.2",
     "react-universal-component": "^4.0.0",
     "reactstrap": "^8.0.0",
@@ -100,6 +104,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "text-mask-addons": "^3.8.0",
+    "url-loader": "^4.1.1",
     "uuid": "^3.3.2",
     "webpack-cli": "^3.1.0",
     "webpack-flush-chunks": "^2.0.3"
